            - Routine expand() is now private, since all publicly accessible
              functions that construct regions will expand them automatically.
            - All access to the underlying triangulation is now const only.
        Class Script:
            - Added a copy constructor and a copy assignment operator.
            - Added member and global swap() functions.
        Class SFSAlt, SFSAltSet:
            - Removed the old SFSAltSet class; replaced this with a new SFSAlt
              class with a static altSet() function that returns a std::vector.
        Class SFSpace:
            - Added move constructors and move assignment operators.
            - Added member and global swap() functions.
            - Routine isLensSpace() now returns a std::optional by value,
              not a newly created pointer that could be null.
            - Routine insertFibre() now throws an exception if alpha is zero.
        Class ShortArray:
            - New class that is essentially a variable-but-bounded sized
              std::array.
        Class SigCensus:
            - New typedef SigIsoList to replace the old global SigIsoList.
            - The old global formSigCensus() is now a static member function
              formCensus(), which uses a type-safe template-based mechanism
              for callbacks instead of function pointers with void* arguments.
            - Function run() is now private.  The only way to access
              this class is through the static routine formCensus().
        Class SigIsoList:
            - Renamed to SigCensus::IsoList.  The old name has been kept
              as a deprecated typedef.
        Class Signature:
            - Added a copy assignment operator.
            - Added move constructors and move assignment operators.
            - Added member and global swap() functions.
            - Function parse() now returns by value (not pointer), and throws